2014-11-07 Martin <tripiana@cern.ch>
	* Move to Base,2.0.16.
	* Fix propagation of Met_doMuon jO flag to ST init.
	* Fix electron SF (split in reco,id,trig as requested from jO).
	* Fix systematics config (reset to nom before/after new syst).
	* Fix run_chorizo. Remove tmp dir after moving file to CollateralPath (so to avoid filling up the disk!)
	* Fix batch submission scripts (multiple-syst runs work now).

2014-11-05 Arely <arelycg@cern.ch>
	* Fix e_MT variable (no need to recompute MET for this one).
        * Correct m_MT in case muons are not invisible.
        * Set harmonization=false for the OR.
        * Configure SUSYTools with METMuonTerm="" to allow for muons=invisble.

2014-11-02 Martin <tripiana@cern.ch>
	* Add preselection variables (configurable through jO).
	* Add OR requirements for signal leptons.
	* Add lepton isolation type config (j0). = Loose, Medium, Tight, None.
	* New (simplified) logic. Some code cleaning.
	* Remove DefinPt,DefinEta selections.
	* Fix data tagging/merging.
	* Fix TileTrip flag.
	* Fix store cleaning when leaving before the end.
	* Fix options parser.
	* Fix warning in GetTruthBosonPt() for zero-pt composite particle.
	* Add jOption to file metadata (TNamed jOption in hist file for now).

2014-10-30 Martin <tripiana@cern.ch>
	* Add options for systematics and output dir.
	* Add further instructions to README to run on the grid.
	* Add wrapper to run in batch. (overrides previous -b option).
	* Fix doOR requirement.
	* Fix PyAMI version in grid setup scripts.
	* Fix batch submission for multiple samples/systemtics. (no re-compiling now)

2014-10-28 Arely <arelycg@cern.ch>
	* Fix 'passOR' requirement should be "!doOR"
        * Fix the '-j' option in util/run.cxx
        * Add n_jets50

2014-10-28 Martin <tripiana@cern.ch>
	* Update GetMET call to latest SUSYTools implementation.
	* Fix jet 'passOR' requirement./
	* Add version flag (-v) to tag output files.

2014-10-27 Martin <tripiana@cern.ch>