@@ -94,6 +94,129 @@ void RunsMap::LoadMap(){
   m_map["data12_Egamma_202798"] = rlist( Rpair(202798, "data12_8TeV.00202798.physics_Egamma.merge.AOD.r5723_p1751/"));
   m_map["data12_Muons_202798"] = rlist( Rpair(202798, "data12_8TeV.00202798.physics_Muons.merge.AOD.r5723_p1751/"));
  
+
+  // Grid jobs
+  //m_map["Wmunu167743_8TeVgrid"] = rlist( Rpair(167743, "mc14_8TeV.167743.Sherpa_CT10_WmunuMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+
+  //8TeV background samples
+
+  m_map["Wenu167740_8TeVgrid"] = rlist( Rpair(167740, "mc14_8TeV.167740.Sherpa_CT10_WenuMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167741_8TeVgrid"] = rlist( Rpair(167741, "mc14_8TeV.167741.Sherpa_CT10_WenuMassiveCBPt0_CJetFilterBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167742_8TeVgrid"] = rlist( Rpair(167742, "mc14_8TeV.167742.Sherpa_CT10_WenuMassiveCBPt0_CJetVetoBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167770_8TeVgrid"] = rlist( Rpair(167770, "mc14_8TeV.167770.Sherpa_CT10_WenuMassiveCBPt140_280_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167771_8TeVgrid"] = rlist( Rpair(167771, "mc14_8TeV.167771.Sherpa_CT10_WenuMassiveCBPt140_280_CJetFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167772_8TeVgrid"] = rlist( Rpair(167772, "mc14_8TeV.167772.Sherpa_CT10_WenuMassiveCBPt140_280_CJetVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167779_8TeVgrid"] = rlist( Rpair(167779, "mc14_8TeV.167779.Sherpa_CT10_WenuMassiveCBPt280_500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167780_8TeVgrid"] = rlist( Rpair(167780, "mc14_8TeV.167780.Sherpa_CT10_WenuMassiveCBPt280_500_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167781_8TeVgrid"] = rlist( Rpair(167781, "mc14_8TeV.167781.Sherpa_CT10_WenuMassiveCBPt280_500_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu180534_8TeVgrid"] = rlist( Rpair(180534, "mc14_8TeV.180534.Sherpa_CT10_WenuMassiveCBPt40_70_BFilter.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu180535_8TeVgrid"] = rlist( Rpair(180535, "mc14_8TeV.180535.Sherpa_CT10_WenuMassiveCBPt40_70_CJetFilterBVeto.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu180536_8TeVgrid"] = rlist( Rpair(180536, "mc14_8TeV.180536.Sherpa_CT10_WenuMassiveCBPt40_70_CJetVetoBVeto.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167788_8TeVgrid"] = rlist( Rpair(167788, "mc14_8TeV.167788.Sherpa_CT10_WenuMassiveCBPt500_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167789_8TeVgrid"] = rlist( Rpair(167789, "mc14_8TeV.167789.Sherpa_CT10_WenuMassiveCBPt500_CJetFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167790_8TeVgrid"] = rlist( Rpair(167790, "mc14_8TeV.167790.Sherpa_CT10_WenuMassiveCBPt500_CJetVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167761_8TeVgrid"] = rlist( Rpair(167761, "mc14_8TeV.167761.Sherpa_CT10_WenuMassiveCBPt70_140_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167762_8TeVgrid"] = rlist( Rpair(167762, "mc14_8TeV.167762.Sherpa_CT10_WenuMassiveCBPt70_140_CJetFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wenu167763_8TeVgrid"] = rlist( Rpair(167763, "mc14_8TeV.167763.Sherpa_CT10_WenuMassiveCBPt70_140_CJetVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167743_8TeVgrid"] = rlist( Rpair(167743, "mc14_8TeV.167743.Sherpa_CT10_WmunuMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167744_8TeVgrid"] = rlist( Rpair(167744, "mc14_8TeV.167744.Sherpa_CT10_WmunuMassiveCBPt0_CJetFilterBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167745_8TeVgrid"] = rlist( Rpair(167745, "mc14_8TeV.167745.Sherpa_CT10_WmunuMassiveCBPt0_CJetVetoBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167773_8TeVgrid"] = rlist( Rpair(167773, "mc14_8TeV.167773.Sherpa_CT10_WmunuMassiveCBPt140_280_BFilter.merge.AOD.e1741_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167774_8TeVgrid"] = rlist( Rpair(167774, "mc14_8TeV.167774.Sherpa_CT10_WmunuMassiveCBPt140_280_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167775_8TeVgrid"] = rlist( Rpair(167775, "mc14_8TeV.167775.Sherpa_CT10_WmunuMassiveCBPt140_280_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167782_8TeVgrid"] = rlist( Rpair(167782, "mc14_8TeV.167782.Sherpa_CT10_WmunuMassiveCBPt280_500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167783_8TeVgrid"] = rlist( Rpair(167783, "mc14_8TeV.167783.Sherpa_CT10_WmunuMassiveCBPt280_500_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167784_8TeVgrid"] = rlist( Rpair(167784, "mc14_8TeV.167784.Sherpa_CT10_WmunuMassiveCBPt280_500_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu180537_8TeVgrid"] = rlist( Rpair(180537, "mc14_8TeV.180537.Sherpa_CT10_WmunuMassiveCBPt40_70_BFilter.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu180538_8TeVgrid"] = rlist( Rpair(180538, "mc14_8TeV.180538.Sherpa_CT10_WmunuMassiveCBPt40_70_CJetFilterBVeto.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu180539_8TeVgrid"] = rlist( Rpair(180539, "mc14_8TeV.180539.Sherpa_CT10_WmunuMassiveCBPt40_70_CJetVetoBVeto.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167791_8TeVgrid"] = rlist( Rpair(167791, "mc14_8TeV.167791.Sherpa_CT10_WmunuMassiveCBPt500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167792_8TeVgrid"] = rlist( Rpair(167792, "mc14_8TeV.167792.Sherpa_CT10_WmunuMassiveCBPt500_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167793_8TeVgrid"] = rlist( Rpair(167793, "mc14_8TeV.167793.Sherpa_CT10_WmunuMassiveCBPt500_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167764_8TeVgrid"] = rlist( Rpair(167764, "mc14_8TeV.167764.Sherpa_CT10_WmunuMassiveCBPt70_140_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167765_8TeVgrid"] = rlist( Rpair(167765, "mc14_8TeV.167765.Sherpa_CT10_WmunuMassiveCBPt70_140_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wmunu167766_8TeVgrid"] = rlist( Rpair(167766, "mc14_8TeV.167766.Sherpa_CT10_WmunuMassiveCBPt70_140_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167746_8TeVgrid"] = rlist( Rpair(167746, "mc14_8TeV.167746.Sherpa_CT10_WtaunuMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167747_8TeVgrid"] = rlist( Rpair(167747, "mc14_8TeV.167747.Sherpa_CT10_WtaunuMassiveCBPt0_CJetFilterBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167748_8TeVgrid"] = rlist( Rpair(167748, "mc14_8TeV.167748.Sherpa_CT10_WtaunuMassiveCBPt0_CJetVetoBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167776_8TeVgrid"] = rlist( Rpair(167776, "mc14_8TeV.167776.Sherpa_CT10_WtaunuMassiveCBPt140_280_BFilter.merge.AOD.e1741_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167777_8TeVgrid"] = rlist( Rpair(167777, "mc14_8TeV.167777.Sherpa_CT10_WtaunuMassiveCBPt140_280_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167778_8TeVgrid"] = rlist( Rpair(167778, "mc14_8TeV.167778.Sherpa_CT10_WtaunuMassiveCBPt140_280_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167785_8TeVgrid"] = rlist( Rpair(167785, "mc14_8TeV.167785.Sherpa_CT10_WtaunuMassiveCBPt280_500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167786_8TeVgrid"] = rlist( Rpair(167786, "mc14_8TeV.167786.Sherpa_CT10_WtaunuMassiveCBPt280_500_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167787_8TeVgrid"] = rlist( Rpair(167787, "mc14_8TeV.167787.Sherpa_CT10_WtaunuMassiveCBPt280_500_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu180540_8TeVgrid"] = rlist( Rpair(180540, "mc14_8TeV.180540.Sherpa_CT10_WtaunuMassiveCBPt40_70_BFilter.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu180541_8TeVgrid"] = rlist( Rpair(180541, "mc14_8TeV.180541.Sherpa_CT10_WtaunuMassiveCBPt40_70_CJetFilterBVeto.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu180542_8TeVgrid"] = rlist( Rpair(180542, "mc14_8TeV.180542.Sherpa_CT10_WtaunuMassiveCBPt40_70_CJetVetoBVeto.merge.AOD.e1867_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167794_8TeVgrid"] = rlist( Rpair(167794, "mc14_8TeV.167794.Sherpa_CT10_WtaunuMassiveCBPt500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167795_8TeVgrid"] = rlist( Rpair(167795, "mc14_8TeV.167795.Sherpa_CT10_WtaunuMassiveCBPt500_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167796_8TeVgrid"] = rlist( Rpair(167796, "mc14_8TeV.167796.Sherpa_CT10_WtaunuMassiveCBPt500_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167767_8TeVgrid"] = rlist( Rpair(167767, "mc14_8TeV.167767.Sherpa_CT10_WtaunuMassiveCBPt70_140_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167768_8TeVgrid"] = rlist( Rpair(167768, "mc14_8TeV.167768.Sherpa_CT10_WtaunuMassiveCBPt70_140_CJetFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Wtaunu167769_8TeVgrid"] = rlist( Rpair(167769, "mc14_8TeV.167769.Sherpa_CT10_WtaunuMassiveCBPt70_140_CJetVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee147770_8TeVgrid"] = rlist( Rpair(147770, "mc14_8TeV.147770.Sherpa_CT10_Zee.merge.AOD.e1434_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167749_8TeVgrid"] = rlist( Rpair(167749, "mc14_8TeV.167749.Sherpa_CT10_ZeeMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167750_8TeVgrid"] = rlist( Rpair(167750, "mc14_8TeV.167750.Sherpa_CT10_ZeeMassiveCBPt0_CFilterBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167751_8TeVgrid"] = rlist( Rpair(167751, "mc14_8TeV.167751.Sherpa_CT10_ZeeMassiveCBPt0_CVetoBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167809_8TeVgrid"] = rlist( Rpair(167809, "mc14_8TeV.167809.Sherpa_CT10_ZeeMassiveCBPt140_280_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167810_8TeVgrid"] = rlist( Rpair(167810, "mc14_8TeV.167810.Sherpa_CT10_ZeeMassiveCBPt140_280_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167811_8TeVgrid"] = rlist( Rpair(167811, "mc14_8TeV.167811.Sherpa_CT10_ZeeMassiveCBPt140_280_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167821_8TeVgrid"] = rlist( Rpair(167821, "mc14_8TeV.167821.Sherpa_CT10_ZeeMassiveCBPt280_500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167822_8TeVgrid"] = rlist( Rpair(167822, "mc14_8TeV.167822.Sherpa_CT10_ZeeMassiveCBPt280_500_CFilterBVeto.merge.AOD.e1741_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167823_8TeVgrid"] = rlist( Rpair(167823, "mc14_8TeV.167823.Sherpa_CT10_ZeeMassiveCBPt280_500_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167833_8TeVgrid"] = rlist( Rpair(167833, "mc14_8TeV.167833.Sherpa_CT10_ZeeMassiveCBPt500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167834_8TeVgrid"] = rlist( Rpair(167834, "mc14_8TeV.167834.Sherpa_CT10_ZeeMassiveCBPt500_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167835_8TeVgrid"] = rlist( Rpair(167835, "mc14_8TeV.167835.Sherpa_CT10_ZeeMassiveCBPt500_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167798_8TeVgrid"] = rlist( Rpair(167798, "mc14_8TeV.167798.Sherpa_CT10_ZeeMassiveCBPt70_140_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zee167799_8TeVgrid"] = rlist( Rpair(167799, "mc14_8TeV.167799.Sherpa_CT10_ZeeMassiveCBPt70_140_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu147771_8TeVgrid"] = rlist( Rpair(147771, "mc14_8TeV.147771.Sherpa_CT10_Zmumu.merge.AOD.e1434_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167752_8TeVgrid"] = rlist( Rpair(167752, "mc14_8TeV.167752.Sherpa_CT10_ZmumuMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167753_8TeVgrid"] = rlist( Rpair(167753, "mc14_8TeV.167753.Sherpa_CT10_ZmumuMassiveCBPt0_CFilterBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167754_8TeVgrid"] = rlist( Rpair(167754, "mc14_8TeV.167754.Sherpa_CT10_ZmumuMassiveCBPt0_CVetoBVeto.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167812_8TeVgrid"] = rlist( Rpair(167812, "mc14_8TeV.167812.Sherpa_CT10_ZmumuMassiveCBPt140_280_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167813_8TeVgrid"] = rlist( Rpair(167813, "mc14_8TeV.167813.Sherpa_CT10_ZmumuMassiveCBPt140_280_CFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167814_8TeVgrid"] = rlist( Rpair(167814, "mc14_8TeV.167814.Sherpa_CT10_ZmumuMassiveCBPt140_280_CVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167824_8TeVgrid"] = rlist( Rpair(167824, "mc14_8TeV.167824.Sherpa_CT10_ZmumuMassiveCBPt280_500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167825_8TeVgrid"] = rlist( Rpair(167825, "mc14_8TeV.167825.Sherpa_CT10_ZmumuMassiveCBPt280_500_CFilterBVeto.merge.AOD.e1741_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167826_8TeVgrid"] = rlist( Rpair(167826, "mc14_8TeV.167826.Sherpa_CT10_ZmumuMassiveCBPt280_500_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167836_8TeVgrid"] = rlist( Rpair(167836, "mc14_8TeV.167836.Sherpa_CT10_ZmumuMassiveCBPt500_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167837_8TeVgrid"] = rlist( Rpair(167837, "mc14_8TeV.167837.Sherpa_CT10_ZmumuMassiveCBPt500_CFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167838_8TeVgrid"] = rlist( Rpair(167838, "mc14_8TeV.167838.Sherpa_CT10_ZmumuMassiveCBPt500_CVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167800_8TeVgrid"] = rlist( Rpair(167800, "mc14_8TeV.167800.Sherpa_CT10_ZmumuMassiveCBPt70_140_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167801_8TeVgrid"] = rlist( Rpair(167801, "mc14_8TeV.167801.Sherpa_CT10_ZmumuMassiveCBPt70_140_CFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Zmumu167802_8TeVgrid"] = rlist( Rpair(167802, "mc14_8TeV.167802.Sherpa_CT10_ZmumuMassiveCBPt70_140_CVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167758_8TeVgrid"] = rlist( Rpair(167758, "mc14_8TeV.167758.Sherpa_CT10_ZnunuMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167759_8TeVgrid"] = rlist( Rpair(167759, "mc14_8TeV.167759.Sherpa_CT10_ZnunuMassiveCBPt0_CFilterBVeto.merge.AOD.e1587_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167760_8TeVgrid"] = rlist( Rpair(167760, "mc14_8TeV.167760.Sherpa_CT10_ZnunuMassiveCBPt0_CVetoBVeto.merge.AOD.e1587_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167818_8TeVgrid"] = rlist( Rpair(167818, "mc14_8TeV.167818.Sherpa_CT10_ZnunuMassiveCBPt140_280_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167819_8TeVgrid"] = rlist( Rpair(167819, "mc14_8TeV.167819.Sherpa_CT10_ZnunuMassiveCBPt140_280_CFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167820_8TeVgrid"] = rlist( Rpair(167820, "mc14_8TeV.167820.Sherpa_CT10_ZnunuMassiveCBPt140_280_CVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167830_8TeVgrid"] = rlist( Rpair(167830, "mc14_8TeV.167830.Sherpa_CT10_ZnunuMassiveCBPt280_500_BFilter.merge.AOD.e1741_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167831_8TeVgrid"] = rlist( Rpair(167831, "mc14_8TeV.167831.Sherpa_CT10_ZnunuMassiveCBPt280_500_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167832_8TeVgrid"] = rlist( Rpair(167832, "mc14_8TeV.167832.Sherpa_CT10_ZnunuMassiveCBPt280_500_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167842_8TeVgrid"] = rlist( Rpair(167842, "mc14_8TeV.167842.Sherpa_CT10_ZnunuMassiveCBPt500_BFilter.merge.AOD.e1741_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167843_8TeVgrid"] = rlist( Rpair(167843, "mc14_8TeV.167843.Sherpa_CT10_ZnunuMassiveCBPt500_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167844_8TeVgrid"] = rlist( Rpair(167844, "mc14_8TeV.167844.Sherpa_CT10_ZnunuMassiveCBPt500_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167806_8TeVgrid"] = rlist( Rpair(167806, "mc14_8TeV.167806.Sherpa_CT10_ZnunuMassiveCBPt70_140_BFilter.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167807_8TeVgrid"] = rlist( Rpair(167807, "mc14_8TeV.167807.Sherpa_CT10_ZnunuMassiveCBPt70_140_CFilterBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Znunu167808_8TeVgrid"] = rlist( Rpair(167808, "mc14_8TeV.167808.Sherpa_CT10_ZnunuMassiveCBPt70_140_CVetoBVeto.merge.AOD.e1620_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167755_8TeVgrid"] = rlist( Rpair(167755, "mc14_8TeV.167755.Sherpa_CT10_ZtautauMassiveCBPt0_BFilter.merge.AOD.e1585_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167756_8TeVgrid"] = rlist( Rpair(167756, "mc14_8TeV.167756.Sherpa_CT10_ZtautauMassiveCBPt0_CFilterBVeto.merge.AOD.e1587_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167757_8TeVgrid"] = rlist( Rpair(167757, "mc14_8TeV.167757.Sherpa_CT10_ZtautauMassiveCBPt0_CVetoBVeto.merge.AOD.e1587_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167815_8TeVgrid"] = rlist( Rpair(167815, "mc14_8TeV.167815.Sherpa_CT10_ZtautauMassiveCBPt140_280_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167816_8TeVgrid"] = rlist( Rpair(167816, "mc14_8TeV.167816.Sherpa_CT10_ZtautauMassiveCBPt140_280_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167817_8TeVgrid"] = rlist( Rpair(167817, "mc14_8TeV.167817.Sherpa_CT10_ZtautauMassiveCBPt140_280_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167827_8TeVgrid"] = rlist( Rpair(167827, "mc14_8TeV.167827.Sherpa_CT10_ZtautauMassiveCBPt280_500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167828_8TeVgrid"] = rlist( Rpair(167828, "mc14_8TeV.167828.Sherpa_CT10_ZtautauMassiveCBPt280_500_CFilterBVeto.merge.AOD.e1741_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167829_8TeVgrid"] = rlist( Rpair(167829, "mc14_8TeV.167829.Sherpa_CT10_ZtautauMassiveCBPt280_500_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167839_8TeVgrid"] = rlist( Rpair(167839, "mc14_8TeV.167839.Sherpa_CT10_ZtautauMassiveCBPt500_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167840_8TeVgrid"] = rlist( Rpair(167840, "mc14_8TeV.167840.Sherpa_CT10_ZtautauMassiveCBPt500_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167841_8TeVgrid"] = rlist( Rpair(167841, "mc14_8TeV.167841.Sherpa_CT10_ZtautauMassiveCBPt500_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167803_8TeVgrid"] = rlist( Rpair(167803, "mc14_8TeV.167803.Sherpa_CT10_ZtautauMassiveCBPt70_140_BFilter.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167804_8TeVgrid"] = rlist( Rpair(167804, "mc14_8TeV.167804.Sherpa_CT10_ZtautauMassiveCBPt70_140_CFilterBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  m_map["Ztautau167805_8TeVgrid"] = rlist( Rpair(167805, "mc14_8TeV.167805.Sherpa_CT10_ZtautauMassiveCBPt70_140_CVetoBVeto.merge.AOD.e1714_s1933_s1911_r5591_r5625/"));
+  
+
   //======================================================================================================================
   //                                                 Local afs/nfs tests
   //======================================================================================================================
@@ -140,8 +263,9 @@ void RunsMap::LoadMap(){
   m_map["TestWmunu167774"] = rlist( Rpair(167774, "/nfs/at3/scratch/arelycg/SUSYANALYSIS_13TeV/xAOD_samples_Testing_oct2014/mc14/Wmunu_167774/"));
   m_map["TestWmunu167775"] = rlist( Rpair(167775, "/nfs/at3/scratch/arelycg/SUSYANALYSIS_13TeV/xAOD_samples_Testing_oct2014/mc14/Wmunu_167775/"));
 
-  m_map["TestZnunu13"] = rlist( Rpair(167820, "/tmp/tripiana/Znunu13/"));
+  m_map["TestWtaunu167778"] = rlist( Rpair(167778, "/nfs/at3/scratch/arelycg/SUSYANALYSIS_13TeV/xAOD_samples_Testing_oct2014/mc14/Wtaunu_167778/"));
 
+  m_map["TestZnunu13"] = rlist( Rpair(167820, "/tmp/tripiana/Znunu13/"));
   
   //New test xAOD mc14 
   m_map["TestMClocal"] = rlist( Rpair(117050, "/afs/cern.ch/atlas/project/PAT/xAODs/r5591/"));
