@@ -10,11 +10,12 @@
 	<Path name="RootFilesFolder">/nfs/at3/scratch/arelycg/SUSYANALYSIS_13TeV/Testing/</Path>
         <Path name="PartialRootFilesFolder">/nfs/at3/scratch/arelycg/SUSYANALYSIS_13TeV/Collateral/</Path>
         <Path name="GRLxmlFile">SUSYTools/GRL/Moriond2013/data12_8TeV.periodAllYear_DetStatus-v58-pro14-01_DQDefects-00-00-33_PHYS_StandardGRL_All_Good.xml</Path>
+        <!--   <Path name="GRLxmlFile">SusyAnalysis/GRL/data12_8TeV.periodB_DetStatus-v61-pro16_DQDefects-00-01-00_PHYS_StandardGRL_All_Good.xml</Path> updated periodB GRL. Due to some job failures, not all lumiblocks are complete. -->
 	<Pileup>
             <Mode name="ApplyPileupReweighting">true</Mode>
             <Path name="PileupReweightingConfigFolder">/nfs/at3/scratch/tripiana/StopAnalysis/anafiles/PileupRWfiles/</Path>
             <Path name="PileupReweightingIlumicalcFile">/nfs/at3/scratch/tripiana/StopAnalysis/anafiles/PileupRWfiles/ilumicalc_histograms_EF_xe80_tclcw_200842-215643.root</Path>		
-            <PeriodConfig>MC12a</PeriodConfig>
+            <PeriodConfig>MC12b</PeriodConfig>
         </Pileup>
 
         <LeptonEfficiency>
@@ -39,7 +40,8 @@
     <ObjectDefinition>
 
         <OverlapRemoval>
-            <Enable>false</Enable>
+            <Enable>true</Enable>
+            <Harmonization>false</Harmonization>
         </OverlapRemoval> 
 
         <Trigger>
